<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kids Can Count</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity">Activity</string>
    <string name="main_hit">Logro</string>
    <string name="main_award">Premios</string>
    <string name="main_phyco">Psicologia</string>
    <string name="title_activity_create">Crear Actividad</string>
    <string name="title_activity_hit">HitActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_award">AwardActivity</string>
    <string name="title_activity_pyco">PycoActivity</string>
    <string name="title_activity_stage">StageActivity</string>
    <string name="title_activity_setup_stage">SetupStageActivity</string>
    <string name="children_name">Nombre del niño</string>
    <string name="gender">Género</string>
    <string name="title_activity_sprite">SpriteActivity</string>
    <string name="male">Niño</string>
    <string name="female">Niña</string>
    <string name="title_form">Formulario de Inicio</string>

    <string-array name="years_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Enviar</string>
    <string name="abc_text">Feedback - vote por esta app</string>
    <string name="count_element">Cuenta Total</string>
    <string name="abc_setting_element">Iniciar Stage</string>
    <string name="name_stage">Nombre del Stage</string>
    <string name="select_theme">Seleccionar Thema</string>
    <string name="title_activity_init_stage">InitStage</string>
    <string name="main_play">JUGAR</string>
    <string name="title_activity_play">PlayActivity</string>
</resources>
